[gd_scene load_steps=7 format=2]

[ext_resource path="res://player/vr-controllers/IndexBase.gd" type="Script" id=1]
[ext_resource path="res://general/toon-shader/toon.gdshader" type="Shader" id=2]
[ext_resource path="res://general/toon-shader/MinimumOutline.tres" type="Material" id=3]

[sub_resource type="SphereMesh" id=4]
radius = 0.01
height = 0.02
radial_segments = 16
rings = 8

[sub_resource type="ShaderMaterial" id=7]
next_pass = ExtResource( 3 )
shader = ExtResource( 2 )
shader_param/shaded = true
shader_param/shadows = true
shader_param/lighting_color = true
shader_param/specular_reflection = true
shader_param/rim_light = true
shader_param/albedo_color = Color( 0.211765, 0.541176, 1, 1 )
shader_param/specular_tint = Color( 0.75, 0.75, 0.75, 0.75 )
shader_param/rim_tint = Color( 0.75, 0.75, 0.75, 0.75 )
shader_param/shade_softness = 0.01
shader_param/shadow_softness = 0.1
shader_param/shadowed_energy = 0.0
shader_param/specular_glossiness = 15.0
shader_param/specular_threshold = 0.5
shader_param/specular_softness = 0.1
shader_param/rim_threshold = 0.25
shader_param/rim_softness = 0.05
shader_param/rim_spread = 0.5
shader_param/light_contribution = 1.0

[sub_resource type="SphereShape" id=6]
radius = 0.01

[node name="IndexBase" type="Spatial"]
script = ExtResource( 1 )

[node name="Index" type="Area" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Index"]
mesh = SubResource( 4 )
material/0 = SubResource( 7 )

[node name="CollisionPolygon" type="CollisionShape" parent="Index"]
shape = SubResource( 6 )

[node name="TriggerPoint" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.03 )

[connection signal="area_entered" from="Index" to="." method="_on_touching_area"]
[connection signal="area_exited" from="Index" to="." method="_on_leaving_area"]
